example/secondfile/objects/Application_CR__c.object
<CustomObject>
    <description>IT SUPPORT</description>
    <fields>
        <fullName>Actual_Build_Unit_Test1__c</fullName>
        <label>Build &amp; Unit Test</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Design__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>to capture actual design hours</description>
        <label>Design</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_SIT__c</fullName>
        <label>SIT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Benefit_Value__c</fullName>
        <formula>CASE(
Business_Benefit__c ,
&quot;HIGH&quot; , 1,
&quot;MEDIUM&quot;, 2,
3
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Benefit Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Benefit__c</fullName>
        <label>Business Benefit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Change Request</relationshipLabel>
        <relationshipName>Change_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Change_Request_Description__c</fullName>
        <label>Change Request Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Change_Request_Title__c</fullName>
        <label>Change Request Title</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Functional_Description__c</fullName>
        <label>Functional Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IT_Support_Ticket__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IT Support Ticket#</label>
        <referenceTo>IT_Support_Ticket__c</referenceTo>
        <relationshipLabel>Change Request</relationshipLabel>
        <relationshipName>Change_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Others__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Others</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <description>Workstreams impacted</description>
        <label>Development Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Configuration</fullName>
                </value>
                <value>
                    <fullName>Custom Code</fullName>
                </value>
                <value>
                    <fullName>Data Access</fullName>
                </value>
                <value>
                    <fullName>Data Migration</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Interface</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Estimated</fullName>
                </value>
                <value>
                    <fullName>Scoped</fullName>
                    <default>true</default>
                    <label>Scoped</label>
                </value>
                <value>
                    <fullName>Ready for Development</fullName>
                </value>
                <value>
                    <fullName>In Development</fullName>
                </value>
                <value>
                    <fullName>Ready for ST</fullName>
                </value>
                <value>
                    <fullName>Ready for UAT</fullName>
                </value>
                <value>
                    <fullName>Ready for PROD</fullName>
                </value>
                <value>
                    <fullName>Deployed to PROD</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
                <value>
                    <fullName>Business Owned</fullName>
                </value>
                <value>
                    <fullName>Application Maintenance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technical_Specifications__c</fullName>
        <label>Technical Specifications</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Total_LOE__c</fullName>
        <formula>Actual_Design__c + Actual_Build_Unit_Test1__c + Others__c + Actual_SIT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total LOE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Priority_Ranking__c</fullName>
        <formula>(Business_Benefit_Value__c + Urgency_of_Request_Value__c + User_Impact_of_Change_Value__c  ) / 3</formula>
        <label>Total Priority Ranking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Urgency_of_Request_Value__c</fullName>
        <formula>CASE(
Urgency_of_Request__c ,
&quot;HIGH&quot;,1, 
&quot;MEDIUM&quot;, 2,
3
)</formula>
        <label>Urgency of Request Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Urgency_of_Request__c</fullName>
        <label>Urgency of Request</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                    <default>true</default>
                    <label>High</label>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Impact_of_Change_Value__c</fullName>
        <formula>CASE(
User_Impact_of_Change__c ,
&quot;High&quot;,1,
&quot;Medium&quot;,2,
3
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Impact of Change Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Impact_of_Change__c</fullName>
        <label>User Impact of Change</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                    <default>true</default>
                    <label>High</label>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Change Request</label>
    <nameField>
        <displayFormat>CR-{000000}</displayFormat>
        <label>CR ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Request</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Status_Estimated_DevelopmentType</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Status__c , &apos;Estimated&apos; ), ISBLANK( Request_Type__c ) )</errorConditionFormula>
        <errorMessage>Development Type cannot be empty.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Status_Scoped_Requirement_Description</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Status__c , &apos;Scoped&apos; )  &amp;&amp;  ISBLANK( Change_Request_Description__c )</errorConditionFormula>
        <errorDisplayField>Change_Request_Description__c</errorDisplayField>
        <errorMessage>Change Request Description can not be empty.</errorMessage>
    </validationRules>
</CustomObject>